--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "src/monetdblite"]
 	path = src/monetdblite
 	url = https://github.com/hannesmuehleisen/MonetDBLite-C
+[submodule "monetdblite"]
+	shallow = true
