--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@ init:
         Import-Module '..\appveyor-tool.ps1'
 
 install:
-  ps: Bootstrap
+  - git submodule update --init --recursive --depth 1
+  - ps: Bootstrap
 
 # Adapt as necessary starting from here
 shallow_clone: true
