making cran check happier

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,12 +1,10 @@
-^\.hgeol
-^\.travis\.yml
+.*\.hgeol
+.*\.travis\.yml
 ^hgimport\.sh
 ^buildandtest\.sh
 ^appveyor\.yml
-^\.git
+.*\.git
 .*\.sql
 .*\.mal
-.*\.ag
-.*\.msc
 ^speed_comparisons\.png
 ^src/build
