--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ clone_script:
 - cmd: >-
     git clone --depth 10 -q --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
     cd %APPVEYOR_BUILD_FOLDER%
-    git checkout -qf %APPVEYOR_REPO_COMMIT%
+    git checkout -q %APPVEYOR_REPO_COMMIT%
     git submodule update --init --recursive --depth 1
 
 install:
