appveyor devel is broken due to R api change, disabling for now

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,8 @@ environment:
 #    WARNINGS_ARE_ERRORS: 1
 
   matrix:
-  - R_VERSION: devel
-    R_ARCH: x64
+#  - R_VERSION: devel
+#    R_ARCH: x64
 
   - R_VERSION: release
 
