re-enabling devel testing for appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,12 +21,14 @@ branches:
     - master
 
 environment:
-#  global:
-#    WARNINGS_ARE_ERRORS: 1
+  global:
+    WARNINGS_ARE_ERRORS: 1
 
   matrix:
-#  - R_VERSION: devel
-#    R_ARCH: x64
+  - R_VERSION: devel
+    R_ARCH: x64
+
+  - R_VERSION: devel
 
   - R_VERSION: release
 
