--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
     - pandoc
 
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - travis_wait Rscript -e 'covr::codecov()'
 
 after_failure:
   - ./travis-tool.sh dump_logs
