--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,9 +20,9 @@ branches:
   only:
     - master
 
-environment:
-  global:
-    WARNINGS_ARE_ERRORS: 0
+#environment:
+#  global:
+#    WARNINGS_ARE_ERRORS: 1
 
   matrix:
   - R_VERSION: devel
@@ -33,9 +33,11 @@ environment:
     PKGTYPE: source
 
   - R_VERSION: release
+    WARNINGS_ARE_ERRORS: 1
 
   - R_VERSION: release
     R_ARCH: x64
+    WARNINGS_ARE_ERRORS: 1
 
 build_script:
   - travis-tool.sh install_deps
