--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,6 @@ License: MPL (== 2.0)
 URL: https://github.com/hannesmuehleisen/MonetDBLite-R
 BugReports: https://github.com/hannesmuehleisen/MonetDBLite-R/issues
 Depends: R (>= 3.2.0)
-Imports: DBI (>= 0.6), digest (>= 0.6.4), methods, codetools
+Imports: DBI (>= 0.6), digest (>= 0.6.4), methods, codetools, bit64
 Suggests: assertthat, testthat, survey, nycflights13, RSQLite, dbplyr, dplyr, gdata, callr, devtools, DBItest
 Collate: mapi.R dbi.R dbapply.R dplyr.R control.R embedded.R zzz.R
