--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,14 @@
 Package: MonetDBLite
 Version: 0.6.0
 Title: In-Process Version of 'MonetDB'
-Author: Hannes Muehleisen [aut, cre], Mark Raasveldt [ctb], Thomas Lumley [ctb], MonetDB B.V. [cph], CWI [cph], The Regents of the University of California [cph], Kungliga Tekniska Hogskolan [cph], Free Software Foundation, Inc. [cph]
-Maintainer: Hannes Muehleisen <hannes@cwi.nl>
+Authors@R: c(
+person("Hannes", "M\u00fchleisen", role = c("aut", "cre"), email = "hannes@cwi.nl", comment = c(ORCID = "0000-0001-8552-0029")),
+person("Mark", "Raasveldt", role = "ctb"),
+person("Thomas", "Lumley", role = "ctb"),
+person("MonetDB B.V.", role = "cph"),
+person("The Regents of the University of California", role = "cph"),
+person("Kungliga Tekniska Hogskolan", role = "cph"),
+person("Free Software Foundation, Inc.", role = "cph"))
 Description: An in-process version of 'MonetDB', a SQL database designed for analytical tasks. Similar to 'SQLite', the database runs entirely inside the 'R' shell.
 License: MPL (== 2.0)
 URL: https://github.com/hannesmuehleisen/MonetDBLite-R
