--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: MonetDBLite
 Version: 0.6.0
 Title: In-Process Version of 'MonetDB'
 Authors@R: c(
-person("Hannes", "M\u00fchleisen", role = c("aut", "cre"), email = "hannes@cwi.nl", comment = c(ORCID = "0000-0001-8552-0029")),
-person("Mark", "Raasveldt", role = "ctb"),
-person("Thomas", "Lumley", role = "ctb"),
-person("MonetDB B.V.", role = "cph"),
-person("The Regents of the University of California", role = "cph"),
-person("Kungliga Tekniska Hogskolan", role = "cph"),
-person("Free Software Foundation, Inc.", role = "cph"))
+	person("Hannes", "M\u00fchleisen", role = c("aut", "cre"), email = "hannes@cwi.nl", comment = c(ORCID = "0000-0001-8552-0029")),
+	person("Mark", "Raasveldt", role = "ctb"),
+	person("Thomas", "Lumley", role = "ctb"),
+	person("MonetDB B.V.", role = "cph"),
+	person("The Regents of the University of California", role = "cph"),
+	person("Kungliga Tekniska Hogskolan", role = "cph"),
+	person("Free Software Foundation, Inc.", role = "cph"))
 Description: An in-process version of 'MonetDB', a SQL database designed for analytical tasks. Similar to 'SQLite', the database runs entirely inside the 'R' shell.
 License: MPL (== 2.0)
 URL: https://github.com/hannesmuehleisen/MonetDBLite-R
@@ -17,3 +17,4 @@ Depends: R (>= 3.2.0)
 Imports: DBI (>= 0.6), digest (>= 0.6.4), methods, codetools
 Suggests: assertthat, testthat, survey, nycflights13, RSQLite, dbplyr, dplyr, gdata, callr, devtools, DBItest, bit64
 Collate: mapi.R dbi.R dbapply.R dplyr.R control.R embedded.R zzz.R
+Encoding: UTF-8
